[gd_scene load_steps=21 format=2]

[ext_resource path="res://Units/Towers/Tower.tscn" type="PackedScene" id=1]
[ext_resource path="res://Units/Towers/Mushroom/Assets/Attack/MushroomRed_Attack_00.png" type="Texture" id=2]
[ext_resource path="res://Units/Towers/Mushroom/Mushroom.gd" type="Script" id=3]
[ext_resource path="res://Units/Towers/Mushroom/Animations/Idle.tres" type="Animation" id=4]
[ext_resource path="res://Units/Towers/Mushroom/Animations/Walk.tres" type="Animation" id=5]
[ext_resource path="res://Units/Towers/Mushroom/Animations/Attack.tres" type="Animation" id=6]
[ext_resource path="res://Effects/ImpactDust/ImpactDust.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/Targeting/TargetingArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://Units/Towers/Mushroom/Assets/AttackNoGas/MushroomRed_AttackNoGas_10.png" type="Texture" id=10]
[ext_resource path="res://Units/Towers/Mushroom/Assets/AttackNoGas/MushroomRed_AttackNoGas_07.png" type="Texture" id=11]
[ext_resource path="res://Units/Towers/Mushroom/Assets/AttackNoGas/MushroomRed_AttackNoGas_08.png" type="Texture" id=12]
[ext_resource path="res://Units/Towers/Mushroom/Assets/AttackNoGas/MushroomRed_AttackNoGas_11.png" type="Texture" id=13]
[ext_resource path="res://Units/Towers/Mushroom/Assets/AttackNoGas/MushroomRed_AttackNoGas_12.png" type="Texture" id=14]
[ext_resource path="res://Units/Towers/Mushroom/Assets/AttackNoGas/MushroomRed_AttackNoGas_09.png" type="Texture" id=15]
[ext_resource path="res://Units/Towers/Mushroom/Assets/AttackNoGas/MushroomRed_AttackNoGas_03.png" type="Texture" id=16]
[ext_resource path="res://Units/Towers/Mushroom/Assets/AttackNoGas/MushroomRed_AttackNoGas_04.png" type="Texture" id=17]

[sub_resource type="Animation" id=3]
resource_name = "ChargeUp"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Flip/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Feast"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flip/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flip/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Flip/PoisonHitbox/Hitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flip/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[node name="Mushroom" instance=ExtResource( 1 )]
script = ExtResource( 3 )
unit_type = "Mushroom"
poison_DOT_damage = 5
stomp_air_offset = -100.0
after_stomp_idle_time = 0.5
resize_time = 0.5
grow_vector = Vector2( 1.5, 1.5 )
shrink_vector = Vector2( 1, 1 )
feast_offset = -11.0
StompParticles = ExtResource( 8 )

[node name="PoisonHitbox" parent="Flip" index="0" instance=ExtResource( 9 )]
scale = Vector2( 1.5, 1.5 )
script = null

[node name="Hitbox" parent="Flip/PoisonHitbox" index="0"]
polygon = PoolVector2Array( 0, -64, 128, 0, 0, 64, -128, 0 )
disabled = true

[node name="VisibleRange" parent="Flip/PoisonHitbox" index="1"]
polygon = PoolVector2Array( -128, 0, 0, -64, 128, 0, 0, 64 )

[node name="Sprite" parent="Flip" index="1"]
position = Vector2( 0, -45 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" parent="." index="6"]
autoplay = "Idle"
anims/ChargeUp = SubResource( 3 )
anims/Feast = SubResource( 5 )
anims/Idle = ExtResource( 4 )
anims/Jump = SubResource( 4 )
anims/PoisonGas = ExtResource( 6 )
anims/RESET = SubResource( 1 )
anims/Walk = ExtResource( 5 )

[node name="FeastLine" type="Line2D" parent="." index="7"]
points = PoolVector2Array( 0, -11 )
width = 3.0
default_color = Color( 0.8, 0.219608, 0.247059, 0.784314 )

[connection signal="body_entered" from="Flip/PoisonHitbox" to="." method="_on_PoisonHitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Flip/PoisonHitbox"]
